Fix heading extra space and nbsp stripping in WYSIWYG editor
- Narrow CSS selector to only collapse empty trailing paragraph after
  headings (p:last-child), preventing mid-content paragraphs from
  being hidden
- Strip &nbsp; between lines in markdown output, not just at boundaries

Made-with: Cursor

--- a/webapp/channels/src/components/advanced_text_editor/wysiwyg_editor/wysiwyg_editor.scss
+++ b/webapp/channels/src/components/advanced_text_editor/wysiwyg_editor/wysiwyg_editor.scss
@@ -57,9 +57,7 @@
                 margin-top: 0;
             }
 
-            + p:empty,
-            + p:has(> br:only-child) {
-                margin: 0;
+            + p:last-child:has(> br:only-child) {
                 font-size: 0;
                 line-height: 0;
             }
